fixed word wrapping around images

--- a/style.css
+++ b/style.css
@@ -7,5 +7,6 @@ body {
 }
 img {
   border-style: solid;
-  width: 30%;
+  width: 35%;
+  float: left;
 }
